Fixed interest choosing at register while unauthenticated, fixed word break in css.

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -36,7 +36,8 @@ input, button, textarea, select {
 
 /* 7. Avoid text overflows */
 p, h1, h2, h3, h4, h5, h6 {
-    overflow-wrap: break-word;
+    
+    word-break: break-word;
 }
 
 /* 8. Improve line wrapping */
